--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vote</title>
+    <link rel="icon" href="../src/assets/images/logo/circle_bear_logo.png" />
+    <title>總統選舉開票地圖</title>
   </head>
   <body>
     <div id="app"></div>
