--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="../src/assets/images/logo/circle_bear_logo.png" />
-    <title>總統選舉開票地圖</title>
+    <link rel="icon" href="./src/assets/images/logo/circle_bear_bg1_logo.png" />
+    <title>總統開票地圖</title>
   </head>
   <body>
     <div id="app"></div>
